# MDPCalib

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: initialization_results  notes
pythoncuda/: CMakeLists.txt
pythoncuda/include/opencv2/: pythoncuda.hpp
pythoncuda/src/: precomp.hpp  pythoncuda.cpp
src/CMRNext/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/CMRNext/launch/: cmrnext_kitti.launch
src/CMRNext/src/cmrnext/: camera_model.py  cmrnext.py  cmrnext_ros_node.py  utils.py
src/CMRNext/src/cmrnext/model/: get_model.py
src/CMRNext/src/cmrnext/model/RAFT/: raft.py
src/CMRNext/src/cmrnext/model/RAFT/modules/: corr.py  extractor.py  update.py
src/CMRNext/src/cmrnext/model/RAFT/utils/: augmentor.py  flow_viz.py  frame_utils.py  utils.py
src/CMRNext/visibility_pkg/: setup.py
src/CMRNext/visibility_pkg/src/: visibility.cpp  visibility_kernel.cu
src/FAST_LO/: CMakeLists.txt  README.md  package.xml
src/FAST_LO/config/: avia.yaml  horizon.yaml  ouster.yaml  pandar.yaml  robosense.yaml  velodyne.yaml
src/FAST_LO/docker/: Dockerfile  docker_start.md  ros_entrypoint.sh
src/FAST_LO/include/: color.h  common_lib.h  matplotlibcpp.h  scope_timer.hpp  so3_math.h
src/FAST_LO/include/LI_init/: LI_init.cpp  LI_init.h
src/FAST_LO/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
src/FAST_LO/launch/: ouster_fast_lo.launch  ouster_fast_lo_no_rviz.launch  robosense.launch  velodyne.launch  velodyne_fast_lo_no_rviz.launch
src/FAST_LO/msg/: States.msg
src/FAST_LO/result/: Initialization_result.txt
src/FAST_LO/src/: FAST_LO.cpp  IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
src/calib_cfg/: CMakeLists.txt  package.xml
src/calib_cfg/config/: config.yaml
src/calib_msgs/: CMakeLists.txt  package.xml
src/calib_msgs/msg/: ImagePclCorrespondencesStamped.msg  UInt16MultiArrayStamped.msg
src/kitti2bag/: .travis.yml  README.md  setup.py
src/kitti2bag/kitti2bag/: __main__.py  kitti2bag.py
src/optimization_utils/: CMakeLists.txt  package.xml
src/optimization_utils/config/: config.yaml
src/optimization_utils/include/optimization_utils/: camera_model.h  camera_model_pinhole.h  ceres_base.h  config.h  cost_functors.h  forward.h  io_utils.h  measurement_types.h  optimizer.h  pose_graph_constraints.h  visualizer.h
src/optimization_utils/launch/: optimizer.launch
src/optimization_utils/src/: camera_model.cpp  camera_model_pinhole.cpp  io_utils.cpp  node.cpp  optimizer.cpp  visualizer.cpp
src/orb_slam3_ros_wrapper/: CMakeLists.txt  README.md  package.xml
src/orb_slam3_ros_wrapper/config/: argoverse2_camera_stereoleft.yaml  argoverse2_camera_stereoright.yaml  freiburg_rgb_bl_burst.yaml  freiburg_rgb_fl_burst.yaml  freiburg_rgb_fr_burst.yaml  kitti_camera_color_left_right.yaml  spot_camera_front_left.yaml
src/orb_slam3_ros_wrapper/include/: common.h
src/orb_slam3_ros_wrapper/launch/: mono_kitti_front_left_right_without_play_and_rviz.launch
src/orb_slam3_ros_wrapper/src/: common.cc  mono_inertial_node.cc  mono_node.cc  rgbd_node.cc  stereo_inertial_node.cc  stereo_node.cc
src/pose_synchronizer/: CMakeLists.txt  README.md  package.xml
src/pose_synchronizer/include/pose_synchronizer/: pose_synchronizer.h
src/pose_synchronizer/launch/: play_bag_kitti_left.launch  play_bag_kitti_right.launch  pose_synchronizer_fastlo_kitti.launch
src/pose_synchronizer/rviz/: combined.rviz
src/pose_synchronizer/src/: node.cpp  pose_synchronizer.cpp
