<?xml version="1.0"?>
<package format="2">
  <name>calib_cfg</name>
  <version>0.0.0</version>
  <description>The calib_cfg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="voedisch@cs.uni-freiburg.de">Niclas Vödisch</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
